--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
 </head>
 <body>
 <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+<div id="gameboard">
+	
 
 
+
+</div>
+<button id="startBtn">Start Game</button>
+<button id="restartBtn">Restar Game</button>
 
 <script type="text/javascript" src="app.js"></script>
 
