center gameboard, change btns color

--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
 
 
 </div>
-<button id="startBtn">Start Game</button>
-<button id="restartBtn">Restar Game</button>
 
+
+<div class="btnsContainer">
+<button class="btns" id="startBtn">Start Game</button>
+<button class="btns"id="restartBtn">Restart Game</button>
+</div>
 <script type="text/javascript" src="app.js"></script>
 
 </body>
