center start restart btns

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
 
 <div class="btnsContainer">
-<button class="btns" id="startBtn">Start Game</button>
-<button class="btns"id="restartBtn">Restart Game</button>
+<button class="btns" id="startBtn">Start</button>
+<button class="btns"id="restartBtn">Restart </button>
 </div>
 <script type="text/javascript" src="app.js"></script>
 
