--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
 <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+
+
+<h1 class="gameTitle">Tic Tac Toe</h1>
 <div id="gameboard">
 	
 
